--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <div class="main">
     <img src="images/image-qr-code.png" alt="QR Code">
-    <p>Improve your front-end skills by building projects
+    <p>Improve your front-end skills by building projects</p>
 
-      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
