--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="main">
     <img src="images/image-qr-code.png" alt="QR Code">
-    <p>Improve your front-end skills by building projects</p>
+    <h1>Improve your front-end skills by building projects</h1>
 
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
