--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
   <div class="main">
     <img src="images/image-qr-code.png" alt="QR Code">
-    <h1>Improve your front-end skills by building projects</h1>
-
+    <div class="text">
+      <h1>Improve your front-end<br> skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
