--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+
   <title>Frontend Mentor | QR code component Challenge</title>
+
 </head>
+
 <body>
-  <div class="main">
+
+  <main>
     <img src="images/image-qr-code.png" alt="QR Code">
-    <div class="text">
+
+    <section class="text">
       <h1>Improve your front-end<br> skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
-  </div>
-  <div class="attribution">
+    </section>
+  </main>
+
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/d-g-Szabo">Daniel Szabo</a>.
-  </div>
+  </footer>
+
 </body>
 </html>
