--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <img src="images/image-qr-code.png" alt="QR Code">
 
     <section class="text">
-      <h1>Improve your front-end<br> skills by building projects</h1>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <h1>Improve your front-end<br>skills by building projects</h1>
+      <p>Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
     </section>
   </main>
 
